tests/snapshots/regression/recovery__missing_closer_then_continue.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/missing_closer_then_continue.flx
exit_code: 1

[ 1 of 10] Compiling  Assert
[ 2 of 10] Compiling  Array
[ 3 of 10] Compiling  List
[ 4 of 10] Compiling  Either
[ 5 of 10] Compiling  IO
[ 6 of 10] Compiling  Math
[ 7 of 10] Compiling  Numeric
[ 8 of 10] Compiling  Option
[ 9 of 10] Compiling  String
• 1 error • tests/fixtures/recovery/missing_closer_then_continue.flx
error[E076]: Missing Closing Delimiter

Expected a closing `]` to match this opening `[`.

  tests/fixtures/recovery/missing_closer_then_continue.flx:1:9
  |
1 | let a = [1, 2, 3;
  |         ^

note: Expected `]` before this token.
  tests/fixtures/recovery/missing_closer_then_continue.flx:1:17
  |
1 | let a = [1, 2, 3;
  |                 ^
